# Barclays-Volscore-Implementation

./: README.md  requirements.txt
cpp/: CMakeLists.txt
cpp/include/: volscore.hpp
cpp/src/: volscore.cpp
cpp/tests/: test_volscore.cpp
python/: adjust_vrp_ml.py  advanced_backtester.py  advanced_vrp.py  data_pipeline.py  ml_lstm.py  ml_lstm_torch.py  ml_placeholder.py  requirements.txt  risk_manager.py  setup.py  simple_backtester.py  test_volscore.py  vrp_computation.py
python/volscore_wrapper/: volscore_pybind.cpp
